sample/asm/errors/invalid_ress_instruction.asm
.function: main
    ress foo

    izero 0
    return
.end
